# Z-Attack

./: LICENSE  README.md  ZAttackNG  config.py  manufacturer_specific.xml  pyproject.toml  requirements.txt  s2_crypto.py  s2_manager.py  zattack-ImGUI.py  zwClasses.py
core/: __init__.py  crypto.py  network.py  protocol.py
data/: __init__.py  sendData.py  zwClasses.py
gui/: __init__.py  main_window.py  s2_window.py  utils.py  windows.py
hardware/: __init__.py  base.py  rfcat_device.py  serial_device.py
s2/: __init__.py  s2_crypto.py  s2_manager.py
