[project]
name = "Z-Attack-NG"
version = "1.0"
description = "Z-Wave Packet Interception & Injection"
authors = [
    {name = "Sebastien Dudek"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imgui (>=2.0.0,<3.0.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "pycryptodomex (>=3.23.0,<4.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "glfw (>=2.10.0,<3.0.0)",
    "pyglfw (>=0.2.2,<0.3.0)",
    "rfcat (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
